[package]
name = "Voxel_test_0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14.0"
bevy_xpbd_3d = "0.5.0"
noise = "0.9.0"
bevy_flycam = "*"
bytemuck = "1.16.1"
tokio = { version = "1", features = ["full"] }
async-std = "1.10"
futures-lite = "2.3.0"
futures = "0.3.30"

